# clam

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  profile.sh  pyproject.toml
.github/workflows/: benchmark.yml  release.yml  tests.yml
benches/: find_kth.rs  knn_search.rs  knn_vs_rnn.rs  pairwise.rs  partition.rs  rnn_search.rs
benches/utils/: search_readers.rs
cakes/: Cargo.toml
cakes/src/: cakes.rs  lib.rs
chaoda/: Cargo.toml
clam/: Cargo.toml
clam/benches/: partition.rs  readers.rs
clam/benches/utils/: readers.rs
clam/src/: cluster.rs  constants.rs  dataset.rs  helpers.rs  lib.rs  metric.rs  partition_criteria.rs  prelude.rs  space.rs
data/: .gitignore
examples/hdf5/: reports.rs
examples/search_small/: main.rs
examples/search_tiny/: main.rs
examples/utils/: mod.rs
examples_python/hdf5/: plotting.ipynb
src/core/: cluster.rs  cluster_criteria.rs  mod.rs
src/core/dataset/: arrow_dataset.rs  mod.rs
src/core/dataset/arrow_dataset/: batched_reader.rs  dataset.rs  io.rs  metadata.rs  mod.rs  reader.rs  tests.rs  util.rs
src/core/graph/: criteria.rs
src/core/number/: _number.rs  num_bool.rs
src/distances/: mod.rs  u8.rs
src/geometry/: triangle.rs
src/search/: cakes.rs  find_kth.rs  knn_sieve.rs
src/traits/: metric.rs  space.rs
src/utils/: helpers.rs
