[tool.poetry]
name = "pyclam"
version = "0.9.0"
description = "pyCLAM: Python implementation of the CLAM project."
authors = [
    "Najib Ishaq <najib_ishaq@zoho.com>",
    "Tom Howard <info@tomhoward.codes>",
    "Noah Daniels <noah_daniels@uri.edu>",
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "~1.23.4"
scipy = "~1.9.3"
scikit-learn = "~1.1.3"
h5py = "~3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
