[package]
name = "clam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
libm = "0.2"
rand = "0.8"
rayon = "1.5"
rand_chacha = "0.3"
bitvec = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies]
float-cmp = "0.9"
